--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div id="body" class="my-0">
            <div id="welcomePanel" class="position-relative">
-               <img src="/img/banner.png"/>
+               <img src="./img/banner.png"/>
                 <div class="message-panel position-absolute">
                     <p class="message-caption-big">LEARN TO PLAY POKER FOR FREE</p>
                     <p class="message-text">Welcome to our website dedicated to playing online poker.
@@ -70,13 +70,13 @@
             </div>
             <div class="row my-5" id="promoPanel">
                 <div class="message-panel col mr-5">
-                   <img src="/img/icn-promo-1.png" class="message-icon"/>
+                   <img src="./img/icn-promo-1.png" class="message-icon"/>
                     <p class="message-caption">Weekly freerolls</p>
                     <p class="message-text">
                     Take part in weekly tournaments, get a lot of impressions and pleasures. Generous prizes waiting for the winners!</p>
                 </div>
                 <div class="message-panel col mx-5">
-                   <img src="/img/icn-promo-2.png" class="message-icon"/>
+                   <img src="./img/icn-promo-2.png" class="message-icon"/>
                     <p class="message-caption">Sign up and start playing today!</p>
                     <p class="message-text">We offer twenty-four-hour customer support, secure deposits and fast withdrawal of funds</p>
                 </div>
